# Chorus-Android-Player

./: .gitignore  CITATION.cff  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  build.gradle  settings.gradle
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: ci.yml
app/: build.gradle  gradle.lockfile  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/org/chorusresearch/player/: MainActivity.java  MpdUrlDefaults.java  MpdUrlValidator.java
app/src/main/res/drawable/: ic_launcher.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/org/chorusresearch/player/: MpdUrlDefaultsTest.java  MpdUrlValidatorTest.java
config/: paper-preset.properties  player.properties.example
docs/: ALGORITHM_MAPPING.md  ARCHITECTURE.md  BUILDING.md  CONFIGURATION.md  NATIVE_LIBRARY.md  PARAMETERS.md  PROVENANCE.md  RELEASE_AUDIT.md  RELEASE_CHECKLIST.md  SBOM.spdx.json  TROUBLESHOOTING.md
player-core/: build.gradle  gradle.lockfile
player-core/src/main/java/net/protyposis/android/mediaplayer/: VideoView.java
player-dash/: build.gradle  gradle.lockfile  proguard-rules.pro
scripts/: verify-native-provider.sh  verify-no-private-artifacts.sh
transport-api/: build.gradle  gradle.lockfile
transport-http/: build.gradle
transport-teki/: build.gradle
transport-teki/src/main/cpp/: CMakeLists.txt  chorus_teki_backend_stub.c  chorus_teki_jni.c
transport-teki/src/main/cpp/include/: chorus_teki_backend.h
(+35 files in other folders)
